# AutoCppChecker

./: CMakeLists.txt  main.cpp
analyzer/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt
input_code/: sample.cpp
reports/: report.txt
rulebase/: CMakeLists.txt  RuleBase.cpp  RuleBase.hpp  Rules.json
